2000-04-30  Bart Schaefer  <schaefer@zsh.org>

	* 11024: Completion/Commands/_complete_debug, Doc/Zsh/compsys.yo:
	Completion widget that enables and captures xtrace output.

2000-04-29  Adam Spiers  <adam@spiers.net>

	* 11019: Doc/Zsh/compsys.yo: fix bug in _description example

	* 11017: Completion/Linux/_rpm: fixes for --rmsource and
	--recompile options, and for breakage caused by 10772

2000-04-28  Bart Schaefer  <schaefer@zsh.org>

	* 11015: Src/builtin.c, Src/hashtable.c, Src/signals.c:
	`unfunction TRAPxxx' now works with localtraps in effect.

2000-04-28  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: 11013: Completion/Core/compinstall: more breaks and
	a completion context.

2000-04-28  Bart Schaefer  <schaefer@zsh.org>

	* 11012: Doc/Zsh/intro.yo, Doc/Zsh/manual.yo: Reorder menus
	to match sections in 11008.

2000-04-28  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11008: Doc/zsh.yo, Doc/Zsh/compctl.yo, Doc/Zsh/compsys.yo,
 	Doc/Zsh/compwid.yo, Doc/Zsh/modules.yo, Doc/Zsh/seealso.yo,
 	Doc/Zsh/zle.yo: move compctl docs behind compsys, mention
 	`zcompile -z' in compsys
	
	* 11007: Src/Zle/compmatch.c: misplaced cursor with partial-word
 	matching
	
	* Tanaka: 11001: Completion/User/_enscript, Completion/User/_lp,
	Completion/User/_printers: printer-detection moved to new
	_printers; used by _enscript

	* 11003: Src/Zle/computil.c: fix for reporting multiple actions in
 	comparguments, options with non-optional arguments
	
2000-04-28  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: 10999: Completion/Core/compinstall: some idiot didn't
	get searching of alternative files for definitions to work properly.

2000-04-28  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10992: Src/Zle/complist.c: avoid wrapping around both
 	horizontally and vertically at the same time
	
2000-04-27  Bart Schaefer  <schaefer@zsh.org>

	* Tanaka Akira: 10980: Completion for enscript.
